兼容V8 JDK8的情况